@startuml

title __MODEL's Class Diagram__\n

  package org.zenika.zba.zbadata {
    package org.zenika.zba.zbadata.model {
      class Recipe {
          - id : long
          - name : String
          - ingredientType : String
          - malt : String
          - creator : String
          - steps : List<Step>
          + getId()
          + setId()
          + getName()
          + setName()
          + getIngredientType()
          + setIngredientType()
          + getMalt()
          + setMalt()
          + getCreator()
          + setCreator()
          + getSteps()
          + setSteps()
          + toString()
      }
    }
  }
  

  package org.zenika.zba.zbadata {
    package org.zenika.zba.zbadata.model {
      abstract class Step {
          - id : long
          - selectedStep : int
          + getId()
          + setId()
          + getSelectedStep()
          + setSelectedStep()
          + toString()
      }
    }
  }
  

  Recipe -up-|> Serializable
  Step -up-|> Serializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
